--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 
     <meta property="og:title" content="CivicConnect - Empowering Citizens Through Technology" />
     <meta property="og:description" content="Report civic issues on an interactive map in real time. Connect with your community and local authorities to create positive change." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/placeholder.svg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@CivicConnect" />
+  <meta name="twitter:image" content="/placeholder.svg" />
+  <link rel="icon" href="/favicon.svg" />
     
     <!-- Rajdhani Font from Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
